GNOME Bugzilla – Bug 796951
aggregator: Return an error directly if negotiation of a sink pad failed
Last modified: 2018-08-14 09:32:19 UTC
See commit message
Created attachment 373305 [details] [review] aggregator: Return an error directly if negotiation of a sink pad failed And don't give buffers to subclasses in that case.
Created attachment 373306 [details] [review] audioaggregator: Properly propagate caps negotiation failures Otherwise we'll end up doing a division by zero when clipping buffers, and might even accept buffers for which we don't know the caps.
Created attachment 373307 [details] [review] audioaggregator: Properly propagate caps negotiation failures Otherwise we'll end up doing a division by zero when clipping buffers, and might even accept buffers for which we don't know the caps.
Review of attachment 373307 [details] [review]: Lgtm, we got the crash while clipping in Pitivi recently (https://gitlab.gnome.org/GNOME/pitivi/issues/2228, I didnt have time to investigate :)), hopefully that will fix.
Comment on attachment 373305 [details] [review] aggregator: Return an error directly if negotiation of a sink pad failed Attachment 373305 [details] pushed as 08bd835 - aggregator: Return an error directly if negotiation of a sink pad failed
Attachment 373307 [details] pushed as 1b6eed6 - audioaggregator: Properly propagate caps negotiation failures
Follow-up fix commit 49d212e908fe76de3862caa9d1b4d7ba6bba7e44 (HEAD -> master, origin/master, origin/HEAD) Author: Sebastian Dröge <sebastian@centricular.com> Date: Tue Aug 14 12:30:19 2018 +0300 aggregator: Fixup for previous commit to prevent infinite loop if no events are pending